--- a/src/main/resources/template/model/model.twig
+++ b/src/main/resources/template/model/model.twig
@@ -1,4 +1,4 @@
-package {{ package }};
+package {{ modelField.packagePath }};
 
 import javax.persistence.*;
 
@@ -6,7 +6,7 @@ import javax.persistence.*;
 
 {{ header }}
 @Entity
-public class {{ className }} {
+public class {{ modelField.className }} {
 
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
