--- a/src/main/resources/template/service/service.twig
+++ b/src/main/resources/template/service/service.twig
@@ -14,7 +14,7 @@ public class {{ serviceField.className }} {
     private final {{ repoField.className }} {{ repoField.varName }};
     
     @Autowired
-    public {{ controllerField.className }}({{ repoField.className }} {{ repoField.varName }}) {
+    public {{ serviceField.className }}({{ repoField.className }} {{ repoField.varName }}) {
         this.{{ repoField.varName }} = {{ repoField.varName }};
     }
     
