--- a/src/main/resources/template/repository/repository.twig
+++ b/src/main/resources/template/repository/repository.twig
@@ -5,7 +5,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.data.repository.CrudRepository;
 
-{{ dependencies }}
+{% include '/template/util/imports.twig' with dependencies %}
 
 import {{ modelField.packagePath }}.{{ modelField.className }};
 
