--- a/docs/css/plaster.css
+++ b/docs/css/plaster.css
@@ -19,13 +19,17 @@ h1, h2, h3, a {
     background-color: #FFF;
 }
 
+.mdl-layout__header--scroll {
+  box-shadow: 0 1px 15px #333;
+}
+
 .content {
   margin: -1px auto;
   padding: 1px 0;
   background: white;
-  -webkit-box-shadow: 0 9px 0px 0px white, 0 0px 0px 0px white, 5px 0 15px -4px #333, -5px 0 15px -4px #333;
-  -moz-box-shadow: 0 9px 0px 0px white, 0 0px 0px 0px white, 5px 0 15px -4px #333, -5px 0 15px -4px #333;
-  box-shadow: 0 9px 0px 0px white, 0 0px 0px 0px white, 5px 0 15px -4px #333, -5px 0 15px -4px #333;
+  -webkit-box-shadow: 0 9px 0 0 white, 0 0 0 0 white, 5px 0 15px -4px #333, -5px 0 15px -4px #333;
+  -moz-box-shadow: 0 9px 0 0 white, 0 0 0 0 white, 5px 0 15px -4px #333, -5px 0 15px -4px #333;
+  box-shadow: 0 9px 0 0 white, 0 0 0 0 white, 5px 0 15px -4px #333, -5px 0 15px -4px #333;
 }
 
 .mdl-layout__header, .mdl-layout__header-row {
@@ -111,25 +115,43 @@ h1, h2, h3, a {
   justify-content: space-between;
   list-style-type: none;
   margin: 5vh;
+  padding: 0 25px;
 }
 
 #icon-wrapper > li {
   display: inline-block;
 }
 
+.info-decal {
+  text-align: center;
+}
+
+.info-decal .circle {
+  margin-bottom: 10px;
+}
+
 .circle {
-  width: 20vh;
-  height: 20vh;
-  line-height: 20vh !important;
+  width: 17vh;
+  height: 17vh;
+  line-height: 17vh !important;
   border-radius: 50%;
   text-align: center;
   background: #EDEDED;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
 }
 
 .circle i {
   font-size: 10vh;
-  line-height: 20vh;
+  line-height: 17vh;
   color: #777;
+}
+
+.circle.clickable:hover {
+  cursor: pointer;
+  -webkit-box-shadow: -2px 3px 6px 0 rgba(100,100,100,0.75);
+  -moz-box-shadow: -2px 3px 6px 0 rgba(100,100,100,0.75);
+  box-shadow: -2px 3px 6px 0 rgba(100,100,100,0.75);
 }
 
 .cd-scrolling-bg {
