--- a/docs/css/plaster.css
+++ b/docs/css/plaster.css
@@ -264,6 +264,7 @@ code {
 
 .doc-links-header {
   width: 100%;
+  margin: 0;
 }
 
 .doc-links-header h5 {
@@ -271,7 +272,18 @@ code {
   vertical-align: top;
   margin: 0;
   padding-left: 20px;
-  line-height: 55px;
+  line-height: 56px;
+}
+
+.doc-links-header i {
+  color: #333;
+  overflow: hidden;
+  padding-left: 22px !important;
+}
+
+.doc-links-header i:hover {
+  cursor: pointer;
+  background: lightgray;
 }
 
 .doc-link-entry {
@@ -286,4 +298,5 @@ code {
 
 .doc-content {
   margin-top: 125px;
+  background: #ffffff;
 }
