--- a/docs/css/plaster.css
+++ b/docs/css/plaster.css
@@ -240,50 +240,26 @@ code {
   margin: 0;
 }
 
-.doc-links-wrapper {
+#doc-links-wrapper {
   position: fixed;
   height: 100vh;
   top: 75px;
-  width: 50px;
+  width: 200px;
+  margin-left: -200px;
   background-color: #fff;
   z-index: 100;
   padding: 0 !important;
 }
 
+#doc-links-wrapper.visible {
+  margin-left: 0;
+}
 
 .doc-links {
   z-index: 10;
   -webkit-box-shadow: -2px 3px 6px 0 rgba(100,100,100,0.75);
   -moz-box-shadow: -2px 3px 6px 0 rgba(100,100,100,0.75);
   box-shadow: -2px 3px 6px 0 rgba(100,100,100,0.75);
-}
-
-.doc-links-wrapper.visible {
-  width: 200px;
-}
-
-.doc-links-header {
-  width: 100%;
-  margin: 0;
-}
-
-.doc-links-header h5 {
-  float: left;
-  vertical-align: top;
-  margin: 0;
-  padding-left: 20px;
-  line-height: 56px;
-}
-
-.doc-links-header i {
-  color: #333;
-  overflow: hidden;
-  padding-left: 22px !important;
-}
-
-.doc-links-header i:hover {
-  cursor: pointer;
-  background: lightgray;
 }
 
 .doc-link-entry {
@@ -296,7 +272,7 @@ code {
   vertical-align: middle;
 }
 
-.doc-content {
+#doc-content {
   margin-top: 125px;
   background: #ffffff;
 }
