Added transition for movement

--- a/docs/css/plaster.css
+++ b/docs/css/plaster.css
@@ -294,3 +294,8 @@ code {
 #drawer-icon:after {
   content: "menu";
 }
+
+#doc-links-wrapper, #doc-content {
+  -webkit-transition: all .5s; /* Safari */
+  transition: all .5s;
+}
