--- a/docs/css/plaster.css
+++ b/docs/css/plaster.css
@@ -1,8 +1,8 @@
-h1, h2, h3, h4, h5, h6, a, p {
+h1, h2, h3, h4, h5, h6, a, p, span {
   font-family: raleway-light, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, a {
+h1, h2, h3, h4, h5, h6, a, span {
   color: #333 !important;
 }
 
