Started generating service tests

--- a/src/main/resources/template/model/modelTest.twig
+++ b/src/main/resources/template/model/modelTest.twig
@@ -1,5 +1,5 @@
-package {{ modelField.packagePath }};
+package {{ modelTestField.packagePath }};
 
-public class {{ modelField.className }} {
+public class {{ modelTestField.className }} {
 
 }
