--- a/src/main/resources/template/repository/repositoryTest.twig
+++ b/src/main/resources/template/repository/repositoryTest.twig
@@ -1,5 +1,5 @@
-package {{ repoField.packagePath }};
+package {{ repoTestField.packagePath }};
 
-public class {{ repoField.className }} {
+public class {{ repoTestField.className }} {
 
 }
