--- a/src/main/resources/template/service/serviceTest.twig
+++ b/src/main/resources/template/service/serviceTest.twig
@@ -37,7 +37,10 @@ public class {{ serviceTestField.className }} {
 
     @Test
     public void testRead() {
+        {{ modelField }}
+        {{ modelField.className }} instance = new {{ modelField.className }}();
 
+        when(this.{{ repoField.varName }}.save(id)).thenReturn(instance);
     }
 
     @Test
